# operation_tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
AutoMediaBot/: config.json.temp  config.json.tmp  config_manager.py  db_manager.py  deploy.sh  llm_engine.py  main.py  readme.md  requirements.txt  server.py  task_scheduler.py
AutoMediaBot/node_server/: package.json  server.js
AutoMediaBot/public/: index.html
AutoMediaBot/py_server/: config.json  readme.md  requirements.txt
AutoMediaBot/py_server/public/: index.html
AutoMediaBot/scrapers/: __init__.py  baidu.py  douyin.py  toutiao.py  weibo.py  xiaohongshu.py  zhihu.py
HotSpotAI/: .env.example  .pre-commit-config.yaml  main.py  pyproject.toml
HotSpotAI/api/: __init__.py  articles.py  auth.py  categories.py  content.py  history.py  status.py  wechat.py
HotSpotAI/core/: __init__.py  articles.py  auth.py  config.py  database.py  db_pool.py  exceptions.py  llm.py  log_utils.py  logger.py  prompts.py  responses.py  scheduler.py  services.py  tasks.py  types.py  users.py  wechat.py  wechat_client.py
HotSpotAI/db/: __init__.py  base.py  categories.py  raw_news.py  topics.py  users.py
HotSpotAI/scrapers/: __init__.py  baidu.py  base.py  douyin.py  factory.py  toutiao.py  weibo.py  xiaohongshu.py  zhihu.py
HotSpotAI/scripts/: create_admin.py
HotSpotAI/tests/: conftest.py
HotSpotAI/tests/unit/: test_config.py  test_database.py  test_log_utils.py  test_prompts.py  test_scrapers.py
HotSpotAI/utils/: __init__.py  retry.py
deploy/: deploy.sh  hotspotai-backend.service  hotspotai-scraper.service  nginx.conf  setup-env.sh  ubuntu-deploy-guide.md  update.sh
frontend/: .env.development  .env.production  jsconfig.json  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/api/modules/: articles.js  auth.js  categories.js  content.js  history.js  status.js  wechat.js
frontend/src/assets/: index.css
frontend/src/components/: GenerateDialog.vue  TopicCard.vue  WeChatPublishDialog.vue
frontend/src/composables/: index.js  useAuth.js  useLoading.js  useMessage.js  useSSE.js
frontend/src/constants/: index.js
frontend/src/router/: index.js
frontend/src/stores/: app.js  auth.js  index.js  topics.js
frontend/src/utils/: formatters.ts  platform.ts
frontend/src/views/: CategoryManagement.vue  History.vue  Home.vue  Login.vue  MyArticles.vue  SharedArticle.vue
scripts/: deploy.sh  start-backend.bat  start-frontend.bat  start-frontend.sh  start.bat  start.sh  stop.bat  stop.sh
