[tool.poetry]
name = "operation-tools"
version = "0.1.0"
description = "Tools for operation management"
authors = ["winston"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.100.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0"}
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
httpx = ">=0.24.0"
beautifulsoup4 = ">=4.12.0"
playwright = ">=1.35.0"
openai = ">=1.3.0"
apscheduler = ">=3.10.0"
aiosqlite = ">=0.19.0"
tenacity = ">=8.2.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
email-validator = ">=2.0.0"
python-multipart = ">=0.0.6"
passlib = "1.7.4"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
